better auto complete on (un)protect + typo